crates/utsh-ffi/src/bindings.rs

/* automatically generated by rust-bindgen (style). Do not edit by hand.
 *
 * 来源：src/cpp/bash_parser.h
 * 重新生成：cargo run -p utsh-ffi --example gen_bindings   （需要 libclang）
 *
 * 提交到仓库的原因：让不安装 libclang 的环境也能正常构建（bindgen 仅作为
 * dev-dependency 存在，普通 `cargo build` 不会编译它）。
 */

#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]

use std::os::raw::c_char;

/// 不透明的 AST 节点（结构体定义位于 C++ 侧 `bash_parser.cpp`）。
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct utsh_ast_node {
    _unused: [u8; 0],
}

extern "C" {
    /// 解析命令行，失败（输入非法/分配失败）返回 `nullptr`。
    pub fn parse_bash(input: *const c_char) -> *mut utsh_ast_node;
    /// 把 AST 序列化为堆上的 JSON C 字符串（调用者负责 `free_cstr`）。
    pub fn ast_to_json(node: *const utsh_ast_node) -> *const c_char;
    /// 释放 `parse_bash` 返回的节点。
    pub fn free_ast(node: *mut utsh_ast_node);
    /// 释放 `ast_to_json` 返回的字符串。
    pub fn free_cstr(s: *const c_char);
}
